syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.sandbox";
option java_outer_classname = "MessageProto";
option objc_class_prefix = "MP";

package sandbox;

// The service definition for string functions
service StringFunctions {
  // Define the "Remote Procedural Protocol" for capitalizing a word
  rpc CapitalizeMessage (MessageRequest) returns (UpperMessageResponse) {}

  // Define the "Remote Procedural Protocol" for counting the characters
  rpc CountChars (MessageRequest) returns (LetterCountResponse) {}
}

// The request message containing a string
message MessageRequest {
  string message = 1;
}

// The response message containing the capitalized string
message UpperMessageResponse {
  string upperMessage = 1;
}

message LetterCountResponse {
    uint32 numLetters = 1;
}